--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ryan Steinmetz Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/Styles.css">
+    <link rel="stylesheet" href="CSS/Styles.css">
     <!-- <script src="JS/Script.js"></script> -->
   </head>
   <body>
